--- a/src/app/add-person-form/add-person-form.component.html
+++ b/src/app/add-person-form/add-person-form.component.html
@@ -6,7 +6,7 @@
       class="well form-horizontal"
     >
       <fieldset>
-        <legend>Ajouter un contact!</legend>
+        <legend>Contact infos</legend>
 
         <!-- Text input -->
         <div class="form-group">
@@ -209,7 +209,7 @@
         </div>
 
         <!-- Button -->
-        <div class="form-group">
+        <div class="form-group text-center">
           <label class="col-md-10 control-label"></label>
           <div class="col-md-10">
             <button type="submit" class="btn btn-warning">
