--- a/src/app/person-list/person-list.component.html
+++ b/src/app/person-list/person-list.component.html
@@ -39,7 +39,7 @@
           <button
             type="button"
             class="btn btn-danger"
-            (click)="editPerson(person.id)"
+            (click)="editPerson(person)"
           >
             Modifier
           </button>
